# eeg_hearable

./: .gitignore  LICENSE  download_data.py  environment.yml  export.sh  main.py  pyproject.toml  rawdata_accessor.py  server_setup.sh  synthesize_data.py  utils.py
.github/workflows/: ci.yml  lint.yml
docs/: dataset.md  optimize.md  setup.md  tasks.md
scripts/: debug_brir_convolve_np.py  debug_brir_extract.py  debug_brir_stats.sh  tests.md
snapshots/: v1.0.0.json  v1.1.0.json  v1.2.0.json  v1.3.0.json  v1.3.1.json
src/sound_foundry/: config.py  main.py  utils.py
src/sound_foundry/data_accessor/: __init__.py  clip.py  download_data.py  rawdata_accessor.py
src/sound_foundry/pipeline/: audio_selector.py  data_generator.py  dynamic_audio_decorator.py  metadata_generator.py  percentage_allocator.py  source_selector.py  transient_effect_builder.py  util.py
src/sound_foundry/synthesis_parameter/: synthesis_parameter.py
src/sound_foundry/version_control/: version_control.py
tests/data_accessor/: test_download_data.py
tests/pipeline/: test_data_generator_normalize.py  test_percentage_allocator.py  test_source_selector.py  test_transient_effect_builder.py
tests/synthesis_parameter/: test_synthesis_parameter.py
